Bug 162398 - Crash when copy-pasting HTML content from Writer in attached document
Summary: Crash when copy-pasting HTML content from Writer in attached document
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
24.8.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Mike Kaganski
URL:
Whiteboard: target:25.2.0 target:24.8.1 target:24...
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Cut-Copy
  Show dependency treegraph
 
Reported: 2024-08-08 14:46 UTC by Aron Budea
Modified: 2024-09-02 10:48 UTC (History)
0 users

See Also:
Crash report or crash signature:


Attachments
Sample ODT (11.82 KB, application/vnd.oasis.opendocument.text)
2024-08-08 14:46 UTC, Aron Budea
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Aron Budea 2024-08-08 14:46:30 UTC
Created attachment 195770 [details]
Sample ODT

- Open attached sample,
- Select all, and press Ctrl+C to copy,
- Start a new e-mail in Thunderbird, and paste into the body (so HTML content is pasted).

-> Crash.

This is a regression from the following commit, adding CC: to Mike Kaganski:
 
https://git.libreoffice.org/core/commit/6d797c83d9fb891b783de39646b42d34a895c81e
Author:     Mike Kaganski <mike.kaganski@collabora.com>
AuthorDate: Mon Mar 4 12:20:13 2024 +0600
Commit:     Mike Kaganski <mike.kaganski@collabora.com>
CommitDate: Mon Mar 4 13:26:06 2024 +0100

    tdf160017: make sure to emit the closing tags in correct order
Comment 1 Mike Kaganski 2024-08-08 15:29:22 UTC
https://gerrit.libreoffice.org/c/core/+/171642
Comment 2 Commit Notification 2024-08-08 17:58:13 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4cb1849ebd38fde513e15c3087f74871dc5e5124

tdf#162398: InsertItem_ may modify items

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2024-08-13 09:36:35 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-8":

https://git.libreoffice.org/core/commit/cc5dc7f31c05bf730122fb335b81d91a50227711

tdf#162398: InsertItem_ may modify items

It will be available in 24.8.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2024-08-20 06:01:21 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/677b2ce344495c40d8ca6f0836b98fd36dd99d41

tdf#162398: InsertItem_ may modify items

It will be available in 24.2.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2024-09-02 10:48:07 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-24-2-6":

https://git.libreoffice.org/core/commit/aefff6410184a698e8920922a0a9902d2aac6a32

tdf#162398: InsertItem_ may modify items

It will be available in 24.2.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.