tdf#162398: InsertItem_ may modify items

... which would invalidate the iterators of the for loop.

Change-Id: I4962441e75a304a46d6f8ef5bc44fae1f4e03cc7
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171642
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/171653
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>